# api_guide

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: python-app.yml
backend/: Makefile  alembic.ini  pyproject.toml  seed.py  test.db
backend/alembic/: env.py
backend/alembic/versions/: 20250319_ae8976c98103_init.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: activity.py  building.py  organization.py
backend/app/schemas/: activity.py  building.py  organiztaion.py
backend/app/service/: activity.py  building.py  organization.py
backend/config/: app.py  db.py
backend/database/: db.py  db_accessor.py  db_metadata.py  unitofwork.py
backend/database/models/: __init__.py  activity.py  building.py  mixin.py  organization.py
backend/database/repository/: activity.py  building.py  organization.py  repository.py
